--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -45,7 +45,7 @@
                 gap: 30px;
             }
             @include bigMobile {
-                gap: 20px;
+                gap: 25px;
                 padding-left: 1.2rem;
             }
             @include mobile {
@@ -59,6 +59,9 @@
             }
             .academy {
                 line-height: 25px;
+                @include mobile {
+                    line-height: 22px;
+                }
                 h3 {
                     font-size: 30px;
                     padding-bottom: 1rem;
@@ -69,6 +72,10 @@
                 p {
                     opacity: .8;
                     padding-left: 1rem;
+                    @include mobile {
+                        font-size: 15px;
+                        padding-left: .5rem;
+                    }
                 }
                 div {
                     margin-top: 1rem;
@@ -88,6 +95,10 @@
             }
 
             .myself {
+                line-height: 23px;
+                @include mobile {
+                    line-height: 20px;
+                }
                 h3 {
                     font-size: 30px;
                     padding-bottom: 1rem;
@@ -95,11 +106,16 @@
                         font-size: 25px;
                     }
                 }
-                line-height: 23px;
                 p {
                     opacity: .8;
                     padding-left: .5rem ;
-                    
+                    @include bigMobile {
+                        font-size: 14px;
+                    }
+                    @include mobile {
+                        font-size: 12px;
+                        padding-left: 0;
+                    }
                 }
             }
         }
@@ -117,7 +133,7 @@
                 width: 200px;
             }
             @include mobile {
-                width: 150px;
+                width: 140px;
             }
             .image {
                 width: 100%;
@@ -128,7 +144,6 @@
                 img {
                     width: 100%;
                     height: 100%;
-                    // backdrop-filter:blur(50px);
                     border-radius: 5px;
                 }
             }
