few huperlinks and projects added

--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -67,6 +67,7 @@
                 }
                 .buttons {
                     font-weight: 300;
+                    z-index: 1;
                     .btn1{
                         border: 1px solid white;
                         margin-right: 1rem;
